src/objects/ActivityServiceRequest__c.object
<CustomObject>
    <fields>
        <fullName>Abbreviated_Consent__c</fullName>
        <description>Business rules exist</description>
        <label>Abbreviated_Consent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attorney_If_any__c</fullName>
        <label>Attorney_If_any</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified_Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Balance__c</fullName>
        <label>Collection_Activity_Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Date__c</fullName>
        <label>Collection_Activity_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Promise_Amount__c</fullName>
        <label>Collection_Activity_Promise_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Promise_Date__c</fullName>
        <label>Collection_Activity_Promise_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Review_Date__c</fullName>
        <label>Collection_Activity_Review_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Activity_Time__c</fullName>
        <label>Collection_Activity_Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_UserID__c</fullName>
        <label>Collection_UserID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Initiated_By__c</fullName>
        <label>Complaint_Initiated_By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Submitted__c</fullName>
        <label>Complaint_Submitted</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address_Name__c</fullName>
        <label>Current_Address_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current_Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CareOf__c</fullName>
        <label>Current_CareOf</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current_City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Email_Address__c</fullName>
        <description>Email can only be updated if customer does not have an online account</description>
        <label>Current_Email_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Foreign_Country__c</fullName>
        <label>Current_Foreign_Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Home_Number_DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Home_Number_INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Home_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Home_Number_MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mobile_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Mobile_Number_DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Mobile_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Mobile_Number_INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Work_Number_DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Work_Number_INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Work_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_Work_Number_MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Zip_Code_Extn__c</fullName>
        <label>Current_Zip_Code_Extn</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Zipcode__c</fullName>
        <label>Current_Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Complaint__c</fullName>
        <label>Date_of_Complaint</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit_Message__c</fullName>
        <description>From FA</description>
        <label>Edit_Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electronic_Business_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electronic_Business_Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial_Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Good_Thru_Date__c</fullName>
        <description>10 days from Process day</description>
        <label>Good_Thru_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Payoff__c</fullName>
        <label>Gross_Payoff</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Immediate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate_Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue_Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing_Comm_Pref_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Home_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing_Comm_Pref_Home_Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing_Comm_Pref_Mobile_Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing_Comm_Pref_Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Comm_Pref_Work_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing_Comm_Pref_Work_Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Address_Name__c</fullName>
        <label>New_Address_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Address__c</fullName>
        <label>New_Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Care_Of__c</fullName>
        <label>New_Care_Of</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New_City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Email_Address__c</fullName>
        <description>Email can only be updated if customer does not have an online account</description>
        <label>New_Email_Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Home_Number_DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Home_Number_INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Home_Number_MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Mobile_Number_DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Mobile_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Mobile_Number_INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_DNC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Work_Number_DNC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_INVALID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Work_Number_INVALID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Work_Number_MOBILE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New_Work_Number_MOBILE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Zipcode__c</fullName>
        <label>New_Zipcode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Consent__c</fullName>
        <description>Business rules exist</description>
        <label>Overall_Consent</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Not_Received_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business rules exist (Currently 1 field exists for email &amp; text)</description>
        <label>Payment_Not_Received_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Not_Received_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment_Not_Received_Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business rules exist (Currently 1 field exists for email &amp; text)</description>
        <label>Payment_Received_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment_Received_Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Reminder_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Business rules exist</description>
        <label>Payment_Reminder_Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Reminder_Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment_Reminder_Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payoff_Quote__c</fullName>
        <label>Payoff_Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Per_Diem__c</fullName>
        <description>From FA</description>
        <label>Per_Diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <label>Preferred_Contact</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <description>Current date</description>
        <label>Process_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Opt__c</fullName>
        <label>Purchase_Opt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_To__c</fullName>
        <description>Editable</description>
        <label>Quoted_To</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <label>Recipient</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual_Value__c</fullName>
        <label>Residual_Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Date_Due__c</fullName>
        <label>Response_Date_Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SR_First_Name__c</fullName>
        <description>Of borrower requesting the service</description>
        <label>SR_First_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Last_Name_Business_Name__c</fullName>
        <description>Of borrower requesting the service</description>
        <label>SR_Last_Name_Business_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Summary__c</fullName>
        <label>Service_Request_Summary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_By__c</fullName>
        <label>Source_Created_By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Created_Date__c</fullName>
        <label>Source_Created_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_Sytem_Created_By__c</fullName>
        <label>Source_Sytem_Created_By</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StarsSRNumber__c</fullName>
        <label>StarsSRNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFS_LFS_Information_Email_Address__c</fullName>
        <label>TFS_LFS_Information_Email_Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Name_Ext__c</fullName>
        <description>Complaints</description>
        <label>Team_Lead_Name_Ext</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferReason__c</fullName>
        <description>Additional SR Fields in STARS not available in the mandatory SF fields list</description>
        <label>TransferReason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warm_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warm_Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhatId__c</fullName>
        <description>Standard multi-modal lookup field (only available in Activity) that can map to almost any object</description>
        <label>WhatId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>ActivityServiceRequest</label>
    <nameField>
        <label>ActivityServiceRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActivityServiceRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>